[tx] updated from transifex

--- a/l10n/ja.json
+++ b/l10n/ja.json
@@ -11,9 +11,11 @@
     "Notify only when an action is required" : "アクションが必要な時にのみ通知する",
     "Notify about all events" : "すべてのイベントについて通知する",
     "Choose an option" : "オプションを選択してください",
+    "See <a href=\"%s\">%s</a> on %s for more information" : "詳細は <a href=\"%s\">%s</a> （ %s 内）を参照してください",
+    "See %s on %s for more information" : "詳細は %s （%s 内）を参照してください",
     "Mail Notifications" : "メール通知",
-    "You can choose to be notified about events via mail. Some events are informative, others require an action (like accept/decline). Select your preference below:" : "メールでイベントについての通知を受け取ることができます。いくつかのイベントは有益であり、他のイベントはアクション(受け入れる/拒否)が必要です。以下より選択してください:",
-    "It was not possible to get your session. Please, try reloading the page or logout and login again" : "あなたのセッションを取得できませんでした。ページをリロードするかログアウトとログインを試してください",
+    "You can choose to be notified about events via mail. Some events are informative, others require an action (like accept/decline). Select your preference below:" : "メールでイベントについての通知を受け取ることができます。イベントの中には有益なものや、（受け入れ・拒否などの）アクションが必要なものがあります。以下より選択してください:",
+    "It was not possible to get your session. Please, try reloading the page or logout and login again" : "あなたのセッションを取得できませんでした。ページをリロードするかログアウト後の再ログインを試してください",
     "To be able to receive mail notifications it is required to specify an email address for your account." : "メール通知を受信するためには、アカウントのメールアドレスを設定する必要があります。"
 },"pluralForm" :"nplurals=1; plural=0;"
 }
