[tx] updated from transifex

--- a/l10n/he.json
+++ b/l10n/he.json
@@ -2,6 +2,7 @@
     "Notifications" : "התראות",
     "No notifications" : "אין התראות",
     "Dismiss" : "שחרור",
+    "Admin notifications" : "הודעות מנהל",
     "Unknown user session. It is not possible to set the option" : "הפעלת המשתמש אינה ידועה. לא ניתן לשנות אפשרות זו",
     "Option not supported" : "האפשרות אינה נתמכת",
     "Saved" : "נשמר",
@@ -10,6 +11,8 @@
     "Notify only when an action is required" : "יש להודיע כאשר נדרשת פעולה",
     "Notify about all events" : "להודיע על כל האירועים",
     "Choose an option" : "בחר אפשרות",
+    "See <a href=\"%s\">%s</a> on %s for more information" : "מידע נוסף ב- <a href=\"%s\">%s</a> מ- %s ",
+    "See %s on %s for more information" : "מידע נוסף ב- %s מ- %s ",
     "Mail Notifications" : "הודעות בדוא״ל",
     "You can choose to be notified about events via mail. Some events are informative, others require an action (like accept/decline). Select your preference below:" : "ניתן לבחור לקבל הודעות על אירועים דרך דוא״ל. חלק מהאירועים נשלחים למטרות ידיעה בלבד, חלקם דורשים פעילות מסוימת (לאשר/לדחות). נא לבחור את ההעדפה שלך להלן:",
     "It was not possible to get your session. Please, try reloading the page or logout and login again" : "לא הייתה אפשרות לקבל את ההפעלה שלך. נא לנסות לטעון את העמוד מחדש או לצאת ולהיכנס שוב.",
