[tx] updated from transifex

--- a/l10n/nl.json
+++ b/l10n/nl.json
@@ -11,6 +11,7 @@
     "Notify only when an action is required" : "Alleen informeren wanneer er een actie vereist is",
     "Notify about all events" : "Informeer over alle gebeurtenissen",
     "Choose an option" : "Kies een optie",
+    "Hello," : "Hallo,",
     "See <a href=\"%s\">%s</a> on %s for more information" : "Zie <a href=\"%s\">%s</a>op %s voor meer informatie ",
     "See %s on %s for more information" : "Zie %s op %s  voor meer informatie",
     "Mail Notifications" : "E-mail notificatie",
