--- a/l10n/pl.json
+++ b/l10n/pl.json
@@ -11,6 +11,7 @@
     "Notify only when an action is required" : "Powiadamiaj mnie tylko, gdy jest wymagana akcja",
     "Notify about all events" : "Powiadamiaj o wszystkich aktywnościach",
     "Choose an option" : "Wybierz opcję",
+    "Hello," : "Witaj,",
     "See <a href=\"%s\">%s</a> on %s for more information" : "Zajrzyj do <a href=\"%s\">%s</a> na %s aby uzyskać więcej informacji",
     "See %s on %s for more information" : "Zajrzyj do %s na %s aby uzyskać więcej informacji",
     "Mail Notifications" : "Powiadomienia emailowe",
