--- a/l10n/ar.json
+++ b/l10n/ar.json
@@ -1,22 +1,22 @@
 { "translations": {
     "Notifications" : "الإشعارات",
-    "No notifications" : "لا يوجد اشعارات",
-    "Dismiss" : "تراجع",
-    "Admin notifications" : "اشعارات المدير",
-    "Unknown user session. It is not possible to set the option" : "جلسة اتصال غير معروف. من غير الممكن تحديد الخيار",
+    "No notifications" : "لا توجد اشعارات",
+    "Dismiss" : "تجاهل",
+    "Admin notifications" : "إشعارات المسؤول",
+    "Unknown user session. It is not possible to set the option" : "جلسة مستخدم غير معروفة. لا يمكن تعيين الخيار",
     "Option not supported" : "الخيار غير مدعوم",
     "Saved" : "تم الحفظ",
     "Incomplete data" : "البيانات غير مكتملة",
-    "Do not notify via mail" : "لا ترسل اشعارات عن طريق الايميل ",
-    "Notify only when an action is required" : "نبهني فقط عندما تحتاج الي اجراء",
-    "Notify about all events" : " اشعار حول / عن كافة الاحداث",
-    "Choose an option" : "اختر احد الخيارات",
+    "Do not notify via mail" : "لا ترسل إشعارات عن طريق البريد الإلكتروني",
+    "Notify only when an action is required" : "أبلغني في حالة ضرورة اتخاذ إجراء فقط",
+    "Notify about all events" : "أبلغني بجميع الأحداث",
+    "Choose an option" : "اختر خيارًا",
     "Hello," : "مرحبًا،",
-    "See <a href=\"%s\">%s</a> on %s for more information" : "اطلع علي <a href=\"%s\">%s</a> في %s للمزيد من المعلومات ",
-    "See %s on %s for more information" : "اطلع علي %s في %s للمزيد من المعلومات",
-    "Mail Notifications" : "اشعارات البريد",
-    "You can choose to be notified about events via mail. Some events are informative, others require an action (like accept/decline). Select your preference below:" : "تستطيع ان تختار الاشعار حول / عن كافة الاحداث عن طريق الايميل . بعض الاحداث تكون اخبارية و توعوية . واحداث اخرى تحتاج الي اتخاذ اجراء ( علي سبيل المثال   القبول / الرفض ). حدد اختيارك من التالي :",
-    "It was not possible to get your session. Please, try reloading the page or logout and login again" : "لم يكن من الممكن اسعادة جلسة الاتصال الخاصة بك. فضلا, حاول تحديث الصفحة او قم بتسجيل الخروج ثم تسجيل الدخول مره اخرى",
-    "To be able to receive mail notifications it is required to specify an email address for your account." : "حتي تتمكن من استلام الاشعارات علي البريد الالكتروني يجب عليك تحديد بريد الالتكروني لحسابك "
+    "See <a href=\"%s\">%s</a> on %s for more information" : "اطلع على <a href=\"%s\">%s</a> في %s لمزيد من المعلومات",
+    "See %s on %s for more information" : "اطلع على %s في %s لمزيد من المعلومات",
+    "Mail Notifications" : "إشعارات البريد",
+    "You can choose to be notified about events via mail. Some events are informative, others require an action (like accept/decline). Select your preference below:" : "يمكنك اختيار إرسال الإشعار عن جميع الأحداث عبر البريد الإلكتروني. بعض الأحداث تكون إخبارية. وبعضها يتطلب اتخاذ اجراء (على سبيل المثال، القبول/الرفض). حدد تفضيلاتك أدناه:",
+    "It was not possible to get your session. Please, try reloading the page or logout and login again" : "لا يمكن إجراء جلسة. يُرجى محاولة إعادة تحديث الصفحة أو تسجيل الخروج ثم تسجيل الدخول مرة أخرى",
+    "To be able to receive mail notifications it is required to specify an email address for your account." : "لتتمكن من استلام إشعارات البريد الإلكتروني يجب تحديد عنوان بريد إلكتروني لحسابك."
 },"pluralForm" :"nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 && n%100<=10 ? 3 : n%100>=11 && n%100<=99 ? 4 : 5;"
 }
