[tx] updated from transifex

--- a/l10n/es.json
+++ b/l10n/es.json
@@ -18,5 +18,5 @@
     "You can choose to be notified about events via mail. Some events are informative, others require an action (like accept/decline). Select your preference below:" : "Puedes elegir ser notificado acerca de eventos por medio de correo electrónico. Algunos eventos son informativos, otros requieren una acción (como aceptar/declinar). Selecciona tu preferencia abajo:",
     "It was not possible to get your session. Please, try reloading the page or logout and login again" : "No fue posible obtener tu sesión. Por favor, intenta recargar la página o sal y entra de nuevo.",
     "To be able to receive mail notifications it is required to specify an email address for your account." : "Para poder recibir notificaciones por correo electrónico se debe especificar una dirección de correo para tu cuenta."
-},"pluralForm" :"nplurals=2; plural=(n != 1);"
+},"pluralForm" :"nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;"
 }
