--- a/l10n/fr.json
+++ b/l10n/fr.json
@@ -18,5 +18,5 @@
     "You can choose to be notified about events via mail. Some events are informative, others require an action (like accept/decline). Select your preference below:" : "Vous pouvez choisir d'être notifié·e des événements par courriel. Certains événements sont informatifs, d'autres nécessitent une action (comme accepter/refuser). Sélectionnez vos préférences ci-dessous :",
     "It was not possible to get your session. Please, try reloading the page or logout and login again" : "Il n'est pas possible d'accéder à votre session. Merci d’essayer de recharger la page ou de vous déconnecter et vous reconnecter à nouveau.",
     "To be able to receive mail notifications it is required to specify an email address for your account." : "Pour pouvoir recevoir des courriels, il est obligatoire de spécifier une adresse courriel pour votre compte"
-},"pluralForm" :"nplurals=2; plural=(n > 1);"
+},"pluralForm" :"nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;"
 }
