--- a/l10n/it.json
+++ b/l10n/it.json
@@ -18,5 +18,5 @@
     "You can choose to be notified about events via mail. Some events are informative, others require an action (like accept/decline). Select your preference below:" : "Puoi scegliere, se ricevere le notifiche via mail, per gli eventi.Alcuni eventi sono informativi, altri richiedono un azione (per esempio accetta/rifiuta). Seleziona la tua preferenza di seguito: ",
     "It was not possible to get your session. Please, try reloading the page or logout and login again" : "Non è stato possibile prendere la tua sessione. Per cortesia, prova a fare un refresh della pagina oppure esci e rientra.",
     "To be able to receive mail notifications it is required to specify an email address for your account." : "Per poter ricevere le notifiche di posta è necessario specificare un indirizzo email per il tuo account."
-},"pluralForm" :"nplurals=2; plural=(n != 1);"
+},"pluralForm" :"nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;"
 }
