[tx] updated from transifex

--- a/l10n/bg_BG.json
+++ b/l10n/bg_BG.json
@@ -12,8 +12,8 @@
     "Notify about all events" : "Известяване за всички събития",
     "Choose an option" : "Изберете опция",
     "Hello," : "Здравейте,",
-    "See <a href=\"%s\">%s</a> on %s for more information" : "Вижте <a href=\"%s\">%s</a> на %sза повече информация",
-    "See %s on %s for more information" : "Вижте %s на %s за повече информация",
+    "See <a href=\"%s\">%s</a> on %s for more information" : "За повече информация вижте <a href=\"%s\">%s</a> на %s",
+    "See %s on %s for more information" : "За повече информация вижте %s на %s",
     "Mail Notifications" : "Известия по имейл",
     "You can choose to be notified about events via mail. Some events are informative, others require an action (like accept/decline). Select your preference below:" : "Може да изберете да получавате известия за събития по имейл. Някои от тях са информативни, други изискват някакво действие (като приемане/отказ). Изберете според вашите предпочитания.",
     "It was not possible to get your session. Please, try reloading the page or logout and login again" : "Невъзможно е да се осъществи сесията ви. Моля, опитайте да презаредите страницата или да излезете и да влезете отново",
