[tx] updated from transifex

--- a/l10n/sq.json
+++ b/l10n/sq.json
@@ -12,8 +12,8 @@
     "Notify about all events" : "Njoftohuni mbi krejt veprimtaritë",
     "Choose an option" : "Zgjidhni një mundësi",
     "Hello," : "Tungjatjeta,",
-    "See <a href=\"%s\">%s</a> on %s for more information" : "Për më tepër të dhëna, shihni <a href=\"%s\">%s</a> te %s",
-    "See %s on %s for more information" : "Për më tepër të dhëna, shihni %s te %s",
+    "See <a href=\"%s\">%s</a> on %s for more information" : "Për më tepër hollësi shihni <a href=\"%s\">%s</a> te %s",
+    "See %s on %s for more information" : "Për më tepër hollësi shihni %s te %s",
     "Mail Notifications" : "Njoftime Me Email",
     "You can choose to be notified about events via mail. Some events are informative, others require an action (like accept/decline). Select your preference below:" : "Mund të zgjidhni të njoftoheni me email për veprimtaritë. Disa veprimtari janë informative, të tjera lypin një veprim (b.f. pranoje/hidhe poshtë). Përzgjidhni më poshtë parapëlqimin tuaj:",
     "It was not possible to get your session. Please, try reloading the page or logout and login again" : "S’qe e mundur të merrej sesioni juaj. Ju lutemi, provoni ringarkimin e faqes ose bëni daljen dhe hyni sërish",
