[tx] updated from transifex

--- a/l10n/cs_CZ.json
+++ b/l10n/cs_CZ.json
@@ -2,6 +2,7 @@
     "Notifications" : "Upozornění",
     "No notifications" : "Žádné upozornění",
     "Dismiss" : "Zamítnout",
+    "Admin notifications" : "Upozornění správce",
     "Unknown user session. It is not possible to set the option" : "Neznámá relace uživatele. Volbu nelze nastavit",
     "Option not supported" : "Volba není podporována",
     "Saved" : "Uloženo",
@@ -11,6 +12,8 @@
     "Notify about all events" : "Informovat o všech událostech",
     "Choose an option" : "Vyberte možnost",
     "Hello," : "Ahoj,",
+    "See <a href=\"%s\">%s</a> on %s for more information" : "Přečti si <a href=\"%s\">%s</a> na %s pro více informací",
+    "See %s on %s for more information" : "Přečti si %s na %s pro více informací",
     "Mail Notifications" : "Emailové upozornění",
     "You can choose to be notified about events via mail. Some events are informative, others require an action (like accept/decline). Select your preference below:" : "Můžete si vybrat upozornění na události prostřednictvím pošty. Některé události jsou informativní, jiné vyžadují akci (například přijetí / odmítnutí). Zvolte své preference níže:",
     "It was not possible to get your session. Please, try reloading the page or logout and login again" : "Vaše přihlášená relace vypršela. Zkuste prosím znovu načíst stránku nebo se odhlásit a znovu přihlásit",
