--- a/l10n/he.json
+++ b/l10n/he.json
@@ -18,5 +18,5 @@
     "You can choose to be notified about events via mail. Some events are informative, others require an action (like accept/decline). Select your preference below:" : "ניתן לבחור לקבל הודעות על אירועים דרך דוא״ל. חלק מהאירועים נשלחים למטרות ידיעה בלבד, חלקם דורשים פעילות מסוימת (לאשר/לדחות). נא לבחור את ההעדפה שלך להלן:",
     "It was not possible to get your session. Please, try reloading the page or logout and login again" : "לא הייתה אפשרות לקבל את ההפעלה שלך. נא לנסות לטעון את העמוד מחדש או לצאת ולהיכנס שוב.",
     "To be able to receive mail notifications it is required to specify an email address for your account." : "כדי לקבל הודעות דוא״ל יש לציין כתובת דוא״ל לחשבון שלך."
-},"pluralForm" :"nplurals=3; plural=(n == 1 && n % 1 == 0) ? 0 : (n == 2 && n % 1 == 0) ? 1: (n % 10 == 0 && n % 1 == 0 && n > 10) ? 2 : 3;"
+},"pluralForm" :"nplurals=3; plural=(n == 1 && n % 1 == 0) ? 0 : (n == 2 && n % 1 == 0) ? 1: 2;"
 }
