[tx] updated from transifex

--- a/l10n/en_US.json
+++ b/l10n/en_US.json
@@ -1,6 +1,7 @@
 { "translations": {
     "Notifications" : "Notifications",
     "No notifications" : "No notifications",
+    "Dismiss" : "Dismiss",
     "Admin notifications" : "Admin notifications",
     "Unknown user session. It is not possible to set the option" : "Unknown user session. It is not possible to set the option",
     "Option not supported" : "Option not supported",
@@ -10,6 +11,7 @@
     "Notify only when an action is required" : "Notify only when an action is required",
     "Notify about all events" : "Notify about all events",
     "Choose an option" : "Choose an option",
+    "Hello," : "Hello,",
     "See <a href=\"%s\">%s</a> on %s for more information" : "See <a href=\"%s\">%s</a> on %s for more information",
     "See %s on %s for more information" : "See %s on %s for more information",
     "Mail Notifications" : "Mail Notifications",
